--- a/index.html
+++ b/index.html
@@ -4,12 +4,95 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stórt verkefni 1</title>
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="grid.css"> -->
   </head>
   <body>
+    <header>
+      <nav>
+        <ul><li><a href="./index.html">Fooþjónustan</a></li>
+        <li><a href="./um.html">Um</a></li>
+        <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li></ul>
+      </nav>
+      <div class="hero">
+        <h2>Í fyrsta skipti á Íslandi</h2>
+        <h1>Fooþjónustan</h1>
+        <a href="./kaupa.html" class="button">Kaupa</a>
+      </div>
+    </header>
     <main>
-	
+      <section>
+        <div class="row">
+          <div class="col col-6">
+            <div class="bullet">
+              <img src="./img/check.svg" alt="" class="bullet__check__img">
+              <h3 class="bullet__heading">Ódýr og góð þjónusta</h3>
+              <p class="bullet__text">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
+            </div>
+            <div class="bullet">
+              <img src="./img/check.svg" alt="" class="bullet__check__img">
+              <h3 class="bullet__heading">Þægilegt í amstri dagsins</h3>
+              <p class="bullet__text">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
+            </div>
+            <div class="bullet">
+              <img src="./img/check.svg" alt="" class="bullet__check__img">
+              <h3 class="bullet__heading">Nauðsynlegt á hvert heimili</h3>
+              <p class="bullet__text">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
+            </div>
+          </div>
+          <div class="col col-6">
+            <img src="./img/image.jpg" alt="Kaupa! Núna! Strax!" class="bulletimg">
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col col-4">
+            <div class="review">
+              <img src="./img/profile1.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
+              <p class="review__name">Anna Jóns</p>
+              <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
+            </div>
+          </div>
+          <div class="col col-4">
+            <div class="review">
+              <img src="./img/profile2.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
+              <p class="review__name">Siggi Páls</p>
+              <p class="review__sublength">Áskrifandi í tvo daga</p>
+            </div>
+          </div>
+          <div class="col col-4">
+            <div class="review">
+              <img src="./img/profile3.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
+              <p class="review__name">Jón Guðrúnarson</p>
+              <p class="review__sublength">Áskrifandi í ár</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3>Eftir hverju ert þú að bíða?<h3/>
+        <a href="./kaupa.html" class="button button--wide">Kaupa</a>
+      </section>
     </main>
+    <footer>
+      <div class="row">
+        <div class="col col-3 offset-3">
+          Fooþjónustan
+          123-4567
+        </div>
+        <div class="col col-3">
+          Opið 12-13 alla daga
+          Bargata 1
+          900 Foobar
+        </div>
+      </div>
+      <hr>
+      <p class="copyright">© Fooþjónustan 2017</p>
+    </footer>
   </body>
 </html>
-
