--- a/kaupa.html
+++ b/kaupa.html
@@ -5,10 +5,7 @@
     <title>Stórt verkefni 1</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
-    <!--
-    <link rel="stylesheet" href="styleguide.css">
-    <link rel="stylesheet" href="styles.css">
-    -->
+    <link rel="stylesheet" href="kaupa.css">
   </head>
   <body>
     <main>
