--- a/kaupa.html
+++ b/kaupa.html
@@ -11,6 +11,13 @@
     -->
   </head>
   <body>
+    <header>
+      <nav>
+        <ul><li><a href="./index.html">Fooþjónustan</a></li>
+        <li><a href="./um.html">Um</a></li>
+        <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li></ul>
+      </nav>
+    </header>
     <main>
       <form>
         <div class="per-info">
@@ -106,5 +113,20 @@
         <button>Panta</button>
       </form>
     </main>
+    <footer>
+      <div class="row">
+        <div class="col col-3 offset-3">
+          Fooþjónustan
+          123-4567
+        </div>
+        <div class="col col-3">
+          Opið 12-13 alla daga
+          Bargata 1
+          900 Foobar
+        </div>
+      </div>
+      <hr>
+      <p class="copyright">© Fooþjónustan 2017</p>
+    </footer>
   </body>
 </html>
