--- a/kaupa.html
+++ b/kaupa.html
@@ -5,11 +5,12 @@
     <title>Stórt verkefni 1</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
-    <link rel="stylesheet" href="kaupa.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleguide.css">
   </head>
   <body>
     <main>
-      <form>
+      <form class="form">
         <div class="per-info">
             <h2>Persónuupplýsingar</h2>
             <div>
