--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="hero">
         <h2>Í fyrsta skipti á Íslandi</h2>
         <h1>Fooþjónustan</h1>
-        <a href="./kaupa.html" class="button">Kaupa</a>
+        <a href="./kaupa.html" class="button button--medium">Kaupa</a>
       </div>
     </header>
     <main>
