--- a/kaupa.html
+++ b/kaupa.html
@@ -10,11 +10,14 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul><li><a href="./index.html">Fooþjónustan</a></li>
-        <li><a href="./um.html">Um</a></li>
-        <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li></ul>
+      <nav class="navbar">
+        <ul>
+          <li><a href="./index.html">Fooþjónustan</a></li>
+          <li><a href="./um.html">Um</a></li>
+          <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li>
+        </ul>
       </nav>
+      <h1>Kaupa</h1>
     </header>
     <main>
       <section>
@@ -133,7 +136,9 @@
         </div>
       </div>
       <hr>
-      <p class="copyright">© Fooþjónustan 2017</p>
+      <div>
+        <p class="copyright">© Fooþjónustan 2017</p>
+      </div>
     </footer>
   </body>
 </html>
