Set header pic for buy subpage can be added to about page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <ul><li><a href="./index.html">Fooþjónustan</a></li>
         <li><a href="./um.html">Um</a></li>
         <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li></ul>
