--- a/kaupa.html
+++ b/kaupa.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styleguide.css">
   </head>
   <body>
-    <header>
+    <header class="header header--subpage">
       <nav class="navbar">
         <ul>
           <li><a href="./index.html">Fooþjónustan</a></li>
