--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Stórt verkefni 1</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="grid.css"> -->
+    <link rel="stylesheet" href="grid.css">
   </head>
   <body>
     <header>
@@ -15,9 +15,9 @@
         <li><a href="./um.html">Um</a></li>
         <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li></ul>
       </nav>
-      <div class="hero">
-        <h2>Í fyrsta skipti á Íslandi</h2>
-        <h1>Fooþjónustan</h1>
+      <div class="hero hero--index">
+        <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
+        <h1 class="heading heading--one">Fooþjónustan</h1>
         <a href="./kaupa.html" class="button">Kaupa</a>
       </div>
     </header>
@@ -25,20 +25,28 @@
       <section>
         <div class="row">
           <div class="col col-6">
-            <div class="bullet">
-              <img src="./img/check.svg" alt="" class="bullet__check__img">
-              <h3 class="bullet__heading">Ódýr og góð þjónusta</h3>
-              <p class="bullet__text">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
-            </div>
-            <div class="bullet">
-              <img src="./img/check.svg" alt="" class="bullet__check__img">
-              <h3 class="bullet__heading">Þægilegt í amstri dagsins</h3>
-              <p class="bullet__text">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
-            </div>
-            <div class="bullet">
-              <img src="./img/check.svg" alt="" class="bullet__check__img">
-              <h3 class="bullet__heading">Nauðsynlegt á hvert heimili</h3>
-              <p class="bullet__text">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
+            <div class="bullets">
+              <div class="bullet">
+                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <div class="bullet__content">
+                  <h3 class="bullet__heading">Ódýr og góð þjónusta</h3>
+                  <p class="bullet__text">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
+                </div>
+              </div>
+              <div class="bullet">
+                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <div class="bullet__content">
+                  <h3 class="bullet__heading">Þægilegt í amstri dagsins</h3>
+                  <p class="bullet__text">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
+                </div>
+              </div>
+              <div class="bullet">
+                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <div class="bullet__content">
+                  <h3 class="bullet__heading">Nauðsynlegt á hvert heimili</h3>
+                  <p class="bullet__text">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col col-6">
