bretti tökkum, footer og hero í undirsíðum

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="section section--center">
         <h3>Eftir hverju ert þú að bíða?<h3/>
         <a href="./kaupa.html" class="button button--wide">Kaupa</a>
       </section>
