Added review styling

--- a/index.html
+++ b/index.html
@@ -56,28 +56,30 @@
       </section>
       <section>
         <div class="row">
-          <div class="col col-4">
-            <div class="review">
-              <img src="./img/profile1.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
-              <p class="review__name">Anna Jóns</p>
-              <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
+          <div class="reviews">
+            <div class="col col-4">
+              <div class="review">
+                <img src="./img/profile1.jpg" alt="" class="review__img">
+                <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
+                <p class="review__name">Anna Jóns</p>
+                <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
+              </div>
             </div>
-          </div>
-          <div class="col col-4">
-            <div class="review">
-              <img src="./img/profile2.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
-              <p class="review__name">Siggi Páls</p>
-              <p class="review__sublength">Áskrifandi í tvo daga</p>
+            <div class="col col-4">
+              <div class="review">
+                <img src="./img/profile2.jpg" alt="" class="review__img">
+                <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
+                <p class="review__name">Siggi Páls</p>
+                <p class="review__sublength">Áskrifandi í tvo daga</p>
+              </div>
             </div>
-          </div>
-          <div class="col col-4">
-            <div class="review">
-              <img src="./img/profile3.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
-              <p class="review__name">Jón Guðrúnarson</p>
-              <p class="review__sublength">Áskrifandi í ár</p>
+            <div class="col col-4">
+              <div class="review">
+                <img src="./img/profile3.jpg" alt="" class="review__img">
+                <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
+                <p class="review__name">Jón Guðrúnarson</p>
+                <p class="review__sublength">Áskrifandi í ár</p>
+              </div>
             </div>
           </div>
         </div>
