--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           </div>
         </div>
       </section>
-      <section class="section section--center">
-        <h3>Eftir hverju ert þú að bíða?<h3/>
+      <section>
+        <h3 class="heading heading--center">Eftir hverju ert þú að bíða?<h3/>
         <a href="./kaupa.html" class="button button--wide">Kaupa</a>
       </section>
     </main>
