Lagaði hero, footer, fonta og bil

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
     <footer>
       <div class="row">
         <div class="col col-3 offset-3">
-          Fooþjónustan
-          123-4567
+          <p>Fooþjónustan</p>
+          <p>123-4567</p>
         </div>
         <div class="col col-3">
-          Opið 12-13 alla daga
-          Bargata 1
-          900 Foobar
+          <p>Opið 12-13 alla daga</p>
+          <p>Bargata 1</p>
+          <p>900 Foobar</p>
         </div>
       </div>
       <hr>
