--- a/um.html
+++ b/um.html
@@ -6,10 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styleguide.css">
   </head>
   <body>
-    <header class="hero hero--subpage">
+    <header>
       <nav class="navbar">
         <ul>
           <li><a href="./index.html">Fooþjónustan</a></li>
@@ -17,11 +16,13 @@
           <li><a href="./kaupa.html" class="button button--small">Kaupa</a></li>
         </ul>
       </nav>
-      <h1>Um Fooþjónustuna</h1>
+      <div class="hero hero--subpage">
+        <h1 class="heading heading--one">Um Fooþjónustuna</h1>
+      </div>
     </header>
     <main>
       <section>
-        <h1 class="heading heading--text">Hvað er Fooþjónustan?</h1>
+        <h3 class="heading heading--three">Hvað er Fooþjónustan?</h3>
         <p class="text">
           Í hinum ódauðlegu orðum stofnanda okkar:
         </p>
@@ -47,19 +48,17 @@
     <footer>
       <div class="row">
         <div class="col col-3 offset-3">
-          Fooþjónustan
-          123-4567
+          <p>Fooþjónustan</p>
+          <p>123-4567</p>
         </div>
         <div class="col col-3">
-          Opið 12-13 alla daga
-          Bargata 1
-          900 Foobar
+          <p>Opið 12-13 alla daga</p>
+          <p>Bargata 1</p>
+          <p>900 Foobar</p>
         </div>
       </div>
       <hr>
-      <div>
-        <p class="copyright">© Fooþjónustan 2017</p>
-      </div>
+      <p class="copyright">© Fooþjónustan 2017</p>
     </footer>
   </body>
 </html>
