--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <section>
         <div class="row">
-          <div class="col col-6">
+          <div class="col col-6 col-md-12 col-sm-12">
             <div class="bullets">
               <div class="bullet">
                 <img src="./img/check.svg" alt="" class="bullet__check__img">
@@ -49,37 +49,35 @@
               </div>
             </div>
           </div>
-          <div class="col col-6">
+          <div class="col col-6 col-md-12 col-sm-12">
             <img src="./img/image.jpg" alt="Kaupa! Núna! Strax!" class="bulletimg">
           </div>
         </div>
       </section>
       <section>
-        <div class="row">
-          <div class="reviews">
-            <div class="col col-4">
-              <div class="review">
-                <img src="./img/profile1.jpg" alt="" class="review__img">
-                <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
-                <p class="review__name">Anna Jóns</p>
-                <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
-              </div>
+        <div class="row reviews">
+          <div class="col col-4 col-md-6 col-sm-12">
+            <div class="review">
+              <img src="./img/profile1.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
+              <p class="review__name">Anna Jóns</p>
+              <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
             </div>
-            <div class="col col-4">
-              <div class="review">
-                <img src="./img/profile2.jpg" alt="" class="review__img">
-                <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
-                <p class="review__name">Siggi Páls</p>
-                <p class="review__sublength">Áskrifandi í tvo daga</p>
-              </div>
+          </div>
+          <div class="col col-4 col-md-6 col-sm-12">
+            <div class="review">
+              <img src="./img/profile2.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
+              <p class="review__name">Siggi Páls</p>
+              <p class="review__sublength">Áskrifandi í tvo daga</p>
             </div>
-            <div class="col col-4">
-              <div class="review">
-                <img src="./img/profile3.jpg" alt="" class="review__img">
-                <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
-                <p class="review__name">Jón Guðrúnarson</p>
-                <p class="review__sublength">Áskrifandi í ár</p>
-              </div>
+          </div>
+          <div class="col col-4 col-md-6 col-sm-12">
+            <div class="review">
+              <img src="./img/profile3.jpg" alt="" class="review__img">
+              <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
+              <p class="review__name">Jón Guðrúnarson</p>
+              <p class="review__sublength">Áskrifandi í ár</p>
             </div>
           </div>
         </div>
