Klára media queries og smávægilegt fiff hér og þar

--- a/um.html
+++ b/um.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="is">
+<html class="" lang="is">
   <head>
     <meta charset="utf-8">
     <title>Stórt verkefni 1</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="grid.css">
   </head>
   <body>
     <header>
@@ -47,11 +48,11 @@
     </main>
     <footer>
       <div class="row">
-        <div class="col col-3 offset-3">
+        <div class="col col-3 offset-3 col-sm-6 offset-sm-0">
           <p>Fooþjónustan</p>
           <p>123-4567</p>
         </div>
-        <div class="col col-3">
+        <div class="col col-3 col-sm-6">
           <p>Opið 12-13 alla daga</p>
           <p>Bargata 1</p>
           <p>900 Foobar</p>
