--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="grid" lang="is">
+<html class="" lang="is">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,44 +56,38 @@
       </section>
       <section>
         <div class="row reviews">
-          <div class="col col-4 col-md-6 col-sm-12">
-            <div class="review">
-              <img src="./img/profile1.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
-              <p class="review__name">Anna Jóns</p>
-              <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
-            </div>
+          <div class="col col-4 col-md-6 col-sm-12 review">
+            <img src="./img/profile1.jpg" alt="" class="review__img">
+            <blockquote class="review__quote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</blockquote>
+            <p class="review__name">Anna Jóns</p>
+            <p class="review__sublength">Áskrifandi í þrjá mánuði</p>
           </div>
-          <div class="col col-4 col-md-6 col-sm-12">
-            <div class="review">
-              <img src="./img/profile2.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
-              <p class="review__name">Siggi Páls</p>
-              <p class="review__sublength">Áskrifandi í tvo daga</p>
-            </div>
+          <div class="col col-4 col-md-6 col-sm-12 review">
+            <img src="./img/profile2.jpg" alt="" class="review__img">
+            <blockquote class="review__quote">„Vá, þetta breytir öllu!“</blockquote>
+            <p class="review__name">Siggi Páls</p>
+            <p class="review__sublength">Áskrifandi í tvo daga</p>
           </div>
-          <div class="col col-4 col-md-6 col-sm-12">
-            <div class="review">
-              <img src="./img/profile3.jpg" alt="" class="review__img">
-              <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
-              <p class="review__name">Jón Guðrúnarson</p>
-              <p class="review__sublength">Áskrifandi í ár</p>
-            </div>
+          <div class="col col-4 col-md-6 col-sm-12 review">
+            <img src="./img/profile3.jpg" alt="" class="review__img">
+            <blockquote class="review__quote">„A+++, mun aldrei hætta í áskrift“</blockquote>
+            <p class="review__name">Jón Guðrúnarson</p>
+            <p class="review__sublength">Áskrifandi í ár</p>
           </div>
         </div>
       </section>
       <section>
-        <h3 class="heading heading--center">Eftir hverju ert þú að bíða?<h3/>
-        <a href="./kaupa.html" class="button button--wide">Kaupa</a>
+        <h3 class="heading heading--three heading--centered">Eftir hverju ert þú að bíða?</h3>
+        <a href="./kaupa.html" class="button button--wide button--centered">Kaupa</a>
       </section>
     </main>
     <footer>
       <div class="row">
-        <div class="col col-3 offset-3">
+        <div class="col col-3 offset-3 col-sm-6 offset-sm-0">
           <p>Fooþjónustan</p>
           <p>123-4567</p>
         </div>
-        <div class="col col-3">
+        <div class="col col-3 col-sm-6">
           <p>Opið 12-13 alla daga</p>
           <p>Bargata 1</p>
           <p>900 Foobar</p>
