--- a/kaupa.html
+++ b/kaupa.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="is">
+<html class="" lang="is">
   <head>
     <meta charset="utf-8">
     <title>Stórt verkefni 1</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styleguide.css">
+    <link rel="stylesheet" href="grid.css">
   </head>
   <body>
     <header>
@@ -25,7 +25,7 @@
       <section>
         <form class="form">
           <div class="row">
-            <div class="col col-4 offset-1">
+            <div class="col col-4 offset-1 col-md-6 offset-md-0 col-sm-12">
               <fieldset>
                 <legend>Persónuupplýsingar</legend>
                 <div class="input input--text">
@@ -71,7 +71,7 @@
               </fieldset>
             </div>
 
-            <div class="col col-4 offset-2">
+            <div class="col col-4 offset-2 col-md-6 offset-md-0 col-sm-12">
               <fieldset>
                 <legend>Greiðsluupplýsingar</legend>
                 <div class="input">
@@ -131,11 +131,11 @@
     </main>
     <footer>
       <div class="row">
-        <div class="col col-3 offset-3">
+        <div class="col col-3 offset-3 col-sm-6 offset-sm-0">
           <p>Fooþjónustan</p>
           <p>123-4567</p>
         </div>
-        <div class="col col-3">
+        <div class="col col-3 col-sm-6">
           <p>Opið 12-13 alla daga</p>
           <p>Bargata 1</p>
           <p>900 Foobar</p>
