Gerði readme og breytti titlum á síðum

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Stórt verkefni 1</title>
+    <title>Fooþjónustan</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid.css">
@@ -27,21 +27,21 @@
           <div class="col col-6 col-md-12 col-sm-12">
             <div class="bullets">
               <div class="bullet">
-                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <img src="./img/check.svg" alt="checkmark" class="bullet__check__img">
                 <div class="bullet__content">
                   <h3 class="bullet__heading">Ódýr og góð þjónusta</h3>
                   <p class="bullet__text">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
                 </div>
               </div>
               <div class="bullet">
-                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <img src="./img/check.svg" alt="checkmark" class="bullet__check__img">
                 <div class="bullet__content">
                   <h3 class="bullet__heading">Þægilegt í amstri dagsins</h3>
                   <p class="bullet__text">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
                 </div>
               </div>
               <div class="bullet">
-                <img src="./img/check.svg" alt="" class="bullet__check__img">
+                <img src="./img/check.svg" alt="checkmark" class="bullet__check__img">
                 <div class="bullet__content">
                   <h3 class="bullet__heading">Nauðsynlegt á hvert heimili</h3>
                   <p class="bullet__text">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
