--- a/kaupa.html
+++ b/kaupa.html
@@ -2,7 +2,7 @@
 <html class="" lang="is">
   <head>
     <meta charset="utf-8">
-    <title>Stórt verkefni 1</title>
+    <title>Kaupa - Fooþjónustan</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -35,7 +35,7 @@
                 <div class="input input--text">
                   <label for="kennit">Kennitala:</label>
                   <input type="text" pattern="[0-9]{6}-[0-9]{4}" name="kennit"
-                    id="kennit" required autofocus placeholder="123456-7890">
+                    id="kennit" required placeholder="123456-7890">
                 </div>
                 <div class="input input--radioset">
                   <p>Kyn:</p>
@@ -64,8 +64,8 @@
                 </div>
                 <div class="input input--checkbox">
                   <label>
-                  <input type="checkbox" name="postlisti" checked> Skrá mig á
-                    póstlista
+                  <input type="checkbox" name="postlisti" checked>
+                  Skrá mig á póstlista
                   </label>
                 </div>
               </fieldset>
