--- a/um.html
+++ b/um.html
@@ -2,7 +2,7 @@
 <html class="" lang="is">
   <head>
     <meta charset="utf-8">
-    <title>Stórt verkefni 1</title>
+    <title>Um - Fooþjónustan</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab"
       rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
